--- a/css/main.css
+++ b/css/main.css
@@ -4,17 +4,18 @@ body {
 
 th, td {
   text-align: center;
+  color: white;
+  border: solid 2px white;
 }
 
 table {
  margin-top: 10px;
  text-align: center;
+ margin-left: auto;
+ margin-right: auto;
+ border: solid 2px white;
 }
 
-p {
-  color: white;
-  font-size: 1.25em;
-}
 
 .container {
   text-align: center;
